--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = {version = "*", features = ["derive"]}
+serde_yml = {version = "*"}
+
+tokio = {version = "*", features = ["full"]}
+
+log = {version = "*"}
